# rpggame

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEBUG_LLM.md  INTEGRATION_GUIDE.md  LICENSE  MVP.md  PLAYING.md  README.md  ROADMAP.md  SPEC.md  TESTING_NEW_SYSTEM.md  TODO.md  create_test_party.py  debug_console_issue.md  gap_analysis_prompt.md  pyproject.toml  requirements.txt  run_new_system.py
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: ux-design-consultant.md
dnd_engine/: main.py  main_v2.py
dnd_engine/core/: campaign.py  campaign_manager.py  character.py  character_factory.py  character_vault.py  character_vault_v2.py  combat.py  creature.py  dice.py  game_state.py  party.py  (+5 more)
docs/: ARCHITECTURE.md  DEBUG_LLM.md  ROADMAP.md  SPEC_HISTORICAL_2025-11.md  TIME_MANAGER_DESIGN.md  game_src_rules_gap_analysis.md  unquiet_dead_gap_analysis.md
saves/: autosave.json  first-save.json  reset_autosave.json
tests/: test_action_economy.py  test_attack_bonus.py  test_attack_combat_integration.py  test_auto_save.py  test_campaign.py  test_campaign_manager_integration.py  test_campaign_manager_serialization.py  test_campaign_wizard.py  test_cast_spell_exploration.py  test_character_creation_e2e.py  test_character_creation_integration.py  test_character_factory.py  test_character_resources.py  test_character_subclass.py  test_character_vault.py  test_character_vault_integration.py  test_character_vault_v2.py  test_character_wizard.py  test_character_wizard_integration.py  test_cli_cancel_handling.py  test_cli_inventory.py  test_cli_spellcasting_ability_lookup.py  test_cli_take_command.py  test_combat.py  test_combat_item_conditions.py  test_combat_item_usage_integration.py  test_condition_manager.py  test_condition_on_fire_integration.py  test_creature.py  test_currency.py  test_data_loaders.py  test_death_saves.py  test_death_saves_integration.py  test_debug_console.py  test_debug_provider.py  test_dice.py  test_dungeon_generator.py  test_e2e_party.py  test_enemy_numbering.py  test_equipment_proficiency.py  (+60 more)
(+53 files in other folders)
